--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="header">
       <div class="header_logo">
-        <img src="images/logo.jpg" alt="logo" class="logo_image">
+        <img src="images/logo.png" alt="logo" class="logo_image">
       </div>
       <div class="header_inner"> 
         <h1 class="myName">Omar Orabi</h1>
@@ -22,14 +22,16 @@
 
     <main class="content">
       <section class="hero">
-        <img class="hero_image" src="images/test.jpg" alt="hero image">
+        <img class="hero_image" src="images/cat0.jpg" alt="hero image">
       </section>
 
       <section class="myProjects">
         <h2 class="section_title">My Projects</h2>
 
         <div class="project">
-          <img class="project_thumbnail" src="images/test.jpg" alt="project image">
+          <div class="thumbnail_container">
+            <img class="project_thumbnail" src="images/cat1.jpg" alt="project image">
+          </div>
           <h3>Project #1</h3>
           <p class="project-link">
             <a href="">link text</a>
@@ -37,7 +39,9 @@
         </div>
 
         <div class="project">
-          <img class="project_thumbnail" src="images/test.jpg" alt="project image">
+          <div class="thumbnail_container">
+            <img class="project_thumbnail" src="images/cat2.jpg" alt="project image">
+          </div>
           <h3>Project #2</h3>
           <p class="project-link">
             <a href="">link text</a>
@@ -45,7 +49,9 @@
         </div>
 
         <div class="project">
-          <img class="project_thumbnail" src="images/test.jpg" alt="project image">
+          <div class="thumbnail_container">
+            <img class="project_thumbnail" src="images/cat3.jpg" alt="project image">
+          </div>
           <div class="description">
             <h3>Project #3</h3>
             <p class="project-link">
